Dodane webcam control

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <body>
     
     <canvas id="plotno" width="640" height="480" style="border:1px solid black"></canvas>
+    <div class="trashDiv"></div>
 
 
         <script src="jquery.min.js"></script>
