Pierwsze unit testy

--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
         });
         </script>
          <script src="qunit.js"></script>
+    <script src="tests.js"></script>
     </body>
 </html>
